<resources>
    <string name="app_name" translatable="false">DSC Auto Rename</string>
    <string name="general_settings">General settings</string>
    <string name="enable_title">Auto rename service trigger.</string>
    <string name="enable_desc">Files are automatically renamed after the trigger occur.</string>
    <string-array name="service_type_labels">
        <item>Disabled</item>
        <item>Camera events: pictures or videos taken.</item>
        <item>Media content observer: pictures or videos saved.</item>
        <item>File observer: watch on selected folders when files are added. You must check \"Rename within a folder\" and have a least one folder on \"Select a folder\".</item>
        <item>A permanent running service used to catch camera application notification events.</item>
    </string-array>
    <string-array name="service_type_values" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="service_type_labels_v21">
        <item>Disabled</item>
        <item>Media content observer: pictures or videos saved.</item>
        <item>File observer: watch on selected folders when files are added. You must check \"Rename within a folder\" and have a least one folder on \"Select a folder\".</item>
    </string-array>
    <string-array name="service_type_values_v21" translatable="false">
        <item>0</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="ui_settings">UI settings</string>
    <string name="app_theme_title">Application theme:</string>
    <string name="app_theme_title_param">Application theme: %s</string>
    <string name="app_theme_desc">Set the application theme: light or dark.</string>
    <string-array name="app_theme_labels">
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string-array name="app_theme_values" translatable="false">
        <item>light</item>
        <item>dark</item>
    </string-array>
    <string name="service_choice_0">The auto rename service is disabled. No file will be renamed.</string>
    <string name="service_choice_1">The auto rename service is triggered by camera events notifications, if any.</string>
    <string name="service_choice_2">The auto rename service is triggered by media content events notifications, if any.</string>
    <string name="service_choice_3">The auto rename service is triggered when a file is added on selected folders. You must check \"Rename within a folder\" and have a least one folder on \"Select a folder\".</string>
    <string name="service_choice_4">The auto rename service is always running in background, but the files are renamed only when camera application send events notifications.</string>
    <string name="rename_service_start_delay_title">Rename service start delay</string>
    <string name="rename_service_start_delay_desc">Start rename service after</string>
    <string name="seconds_unit">seconds</string>
    <string name="minutes_unit">minutes</string>
    <string name="choose_units_title">Choose delay units:</string>
    <string name="choose_units_title_param">Chosen delay units: %s</string>
    <string name="choose_units_desc">This option allow you to choose above delay units between seconds and minutes.</string>
    <string-array name="delay_units_labels">
        <item>seconds</item>
        <item>minutes</item>
    </string-array>
    <string-array name="delay_units_values" translatable="false">
        <item>1</item>
        <item>60</item>
    </string-array>
    <string name="rename_file_delay_title">Rename files delay</string>
    <string name="rename_file_delay_desc">Rename next file after</string>
    <string name="rename_video_enabled_title">Enable video file rename</string>
    <string name="rename_video_enabled_desc">By checking this option, the video are automatically renamed too, default are renamed only pictures.</string>
    <string name="enable_filter_folder_title">Rename within a folder</string>
    <string name="enable_filter_folder_desc">Normally the rename service will scan all files from your device, by enabling this option you can limit the rename service within a folder.</string>
    <string name="enable_filter_folder_desc_v21">For Android Lollipop users, please enable this feature and chose folders where your camera application save files.</string>
    <string name="enable_filter_alert_v19">Because on Android KitKat are enabled some security constraints, this application will not be able to rename files from SD Card.\nSee the link http://goo.gl/kJeED3 for a possible fix.\nThis application can rename files from internal memory only.\nSet your camera application to save on internal memory.</string>
    <string name="enable_filter_alert_v21">Please enable \"Rename within a folder\" option and select which folder should be scanned for pictures and clips to be renaming using option \"List of scanned folders.\".</string>
    <string name="update_message_v93" translatable="false">Please read Help section from the bottom of application settings!</string>
    <string name="folder_list_title">List of scanned folders.</string>
    <string name="folder_list_all_selected">At least one folder should be left unchecked!</string>
    <string name="folder_list_no_selection">Select at least one folder to delete!</string>
    <string name="folder_list_confirmation">Do you want to remove selected folders?</string>
    <string name="folder_list_no_open_document_tree_support">Your Android version do not have support to chose folders (ACTION_OPEN_DOCUMENT_TREE).\nDo you want to use internal folder picker to select a folder? Using internal folder picker the application will not have granted rights to rename and move files!</string>
    <string name="folder_list_no_grant_permission_1">Your system revoked permissions for below folder:\n\n%s\n\nCheck where this folder was defined and try to select it again!\n\nYou may ignore this message, but the application will not work properly till it\'s gain access over above folder.</string>
    <string name="folder_list_no_grant_permission_2">Your system revoked permissions for below folders:\n\n%s\n\nCheck where these folders were defined and try to select them again!\n\nYou may ignore this message, but the application will not work properly till it\'s gain access over above folders.</string>
    <string name="filter_folder_title">Select a folder.</string>
    <string name="filter_folder_desc" translatable="false">/</string>
    <string name="filter_folder_no_folder">[No folder]</string>
    <string name="enable_folder_scanning_title">Enable folder scanning for files.</string>
    <string name="enable_folder_scanning_desc">Normally this should NOT BE SELECTED! By selecting this option the rename service will scan for media files on the above selected folders. Select this if your device have media content scanner disabled.</string>
    <string name="original_file_name_pattern_from" translatable="false">DSC_*.JPG</string>
    <string name="original_file_name_pattern_to" translatable="false">\'PIC_\'yyyyMMdd_HHmmss</string>
    <string name="original_file_name_pattern" translatable="false">DSC_*.JPG:\'PIC_\'yyyyMMdd_HHmmss,MOV_*.MP4:\'VID_\'yyyyMMdd_HHmmss</string>
    <string name="default_file_name_pattern" translatable="false">DSC_*.JPG:\'PIC_\'yyyyMMdd_HHmmss</string>
    <string name="define_file_name_pattern_title">Define files name patterns</string>
    <string name="define_file_name_pattern_desc">The file name patterns used to search files for rename (\"DSC_*.JPG\" or \"MOV_*.MP4\"), e.g. %s\nWildcards * and ? can be used too.</string>
    <string name="file_name_pattern_dialog_title_add">Add file name patterns</string>
    <string name="file_name_pattern_dialog_title_editor">Edit file name patterns</string>
    <string name="file_name_pattern_dialog_from">1. Original file name pattern:</string>
    <string name="file_name_pattern_dialog_to">2. Renamed file name pattern:</string>
    <string name="file_name_pattern_dialog_bottom">Old file name example:\n\t %1$s\nRenamed file name example:\n\t %2$s</string>
    <string name="file_name_pattern_validation_error_old_empty">Original pattern cannot be empty.</string>
    <string name="file_name_pattern_validation_error_new_empty">Rename filename pattern cannot be empty.</string>
    <string name="file_name_pattern_validation_error_generic">Original pattern is too generic causing to rename files over and over again. Try to define a more restrictive pattern using ? and other used characters.</string>
    <string name="file_name_pattern_validation_error_old">Original file name pattern already exist, change the text with a new one.</string>
    <string name="file_name_pattern_validation_error_new">The original and rename pattern are matching!</string>
    <string name="file_name_pattern_validation_error_original">The original pattern is matching with a rename pattern defined on other case!</string>
    <string name="file_name_pattern_validation_error_rename">The rename pattern is matching with an original pattern defined on other case!</string>
    <string name="file_name_suffix_format_title">Define file name extra suffix</string>
    <string name="file_name_suffix_format_desc">This suffix is used when more than one file have same name, like in burst case. By default the counter have 5 digits.\nExample:\n%s</string>
    <string name="file_name_suffix_format_value" translatable="false">_%05d</string>
    <string name="file_extension_note">The file extension is preserved during rename process.</string>
    <string name="file_name_format" translatable="false">yyyyMMdd_HHmmss</string>
    <string name="rename_file_using_title">Rename file using:</string>
    <string name="rename_file_using_desc">date and time when file was last time modified.</string>
    <string name="move_file_enable">Move the renamed file to below selected folder.</string>
    <string name="move_file_text_no_folder">No folder selected, touch this text to select a folder.</string>
    <string name="move_file_text_selected_folder">Selected folder: %s</string>
    <string name="new_folder">New Folder</string>
    <string name="send_broadcast_msg_title">Send broadcast message</string>
    <string name="send_broadcast_msg_desc">Send broadcast message with renamed file, using this option other application could be announced to pick new renamed file.</string>
    <string name="invoke_media_scanner_for_file_title">Request the media scanner</string>
    <string name="other_settings">Other settings</string>
    <string name="manually_start_title">Start manually rename service</string>
    <string name="manually_start_desc">Touch to start manually rename service</string>
    <string name="file_rename_count_title">Number of renamed files: %d</string>
    <string name="file_rename_count_desc">Touch to reset the number of renamed files.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="no_folders">No folders</string>
    <string name="no_file_name_pattern">No file name pattern defined</string>
    <string name="about_section">About</string>
    <string name="build_version_title">Build version</string>
    <string name="build_version_desc" translatable="false">1</string>
    <string name="license_title">Open source licenses</string>
    <string name="license_desc">License details for open source software</string>
    <string name="donate_title">Donate</string>
    <string name="donate_desc">Please make a donation if you appreciate this application.</string>
</resources>