<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ciubex="http://schemas.android.com/apk/res/ro.ciubex.dscautorename" >

    <PreferenceCategory android:title="@string/general_settings" >
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/service_type_labels"
            android:entryValues="@array/service_type_values"
            android:key="serviceType"
            android:summary="@string/enable_desc"
            android:title="@string/enable_title" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="renameVideoEnabled"
            android:summary="@string/rename_video_enabled_desc"
            android:title="@string/rename_video_enabled_title" />

        <ro.ciubex.dscautorename.preference.SeekBarPreference
            android:defaultValue="3"
            android:key="renameServiceStartDelay"
            android:summary="@string/rename_service_start_delay_desc"
            android:title="@string/rename_service_start_delay_title"
            ciubex:maxValue="30"
            ciubex:minValue="2"
            ciubex:units="@string/seconds_unit" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="enabledFolderScanning"
            android:summary="@string/enable_filter_folder_desc"
            android:title="@string/enable_filter_folder_title" />

        <Preference
            android:dependency="enabledFolderScanning"
            android:key="folderScanningPref"
            android:persistent="false"
            android:summary="@string/filter_folder_desc"
            android:title="@string/filter_folder_title" />

        <EditTextPreference
            android:defaultValue="@string/original_file_prefix"
            android:key="originalFilePrefix"
            android:summary="@string/original_file_prefix_desc"
            android:title="@string/original_file_prefix_title" />
        <EditTextPreference
            android:defaultValue="@string/file_name_format"
            android:key="fileNameFormat"
            android:summary="@string/file_name_format_desc"
            android:title="@string/file_name_format_title" />
        
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/rename_file_using_labels"
            android:entryValues="@array/rename_file_using_values"
            android:key="renameFileDateType"
            android:summary="@string/rename_file_using_desc"
            android:title="@string/rename_file_using_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/other_settings" >
        <Preference
            android:key="manuallyStartRename"
            android:persistent="false"
            android:summary="@string/manually_start_desc"
            android:title="@string/manually_start_title" />
        <Preference
            android:key="fileRenameCount"
            android:persistent="false"
            android:summary="@string/file_rename_count_desc"
            android:title="@string/file_rename_count_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/about_section" >
        <Preference
            android:key="buildVersion"
            android:persistent="false"
            android:summary="@string/build_version_desc"
            android:title="@string/build_version_title" />
        <Preference
            android:key="licensePref"
            android:persistent="false"
            android:summary="@string/license_desc"
            android:title="@string/license_title" />
        <Preference
            android:key="donatePref"
            android:persistent="false"
            android:summary="@string/donate_desc"
            android:title="@string/donate_title" />
    </PreferenceCategory>

</PreferenceScreen>