<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/file_name_pattern_dialog_from" />

    <EditText
        android:id="@+id/editFileNamePatternFrom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/original_file_name_pattern_from" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/file_name_pattern_dialog_to" />

    <EditText
        android:id="@+id/editFileNamePatternTo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/original_file_name_pattern_to" />

    <TextView
        android:id="@+id/fileNamePatternInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/file_name_pattern_dialog_bottom" />

    <CheckBox
        android:id="@+id/enableMoveFiles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/move_file_enable"/>

    <TextView
        android:id="@+id/selectedFolderField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/move_file_text_no_folder"/>

    <TextView
        android:id="@+id/itemsListNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/file_extension_note"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnOk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>