<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ListView
        android:id="@+id/itemsList"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/emptyItemsList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_file_name_pattern"
        android:visibility="gone" />


    <TextView
        android:id="@+id/emptyFolderList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_folders"
        android:visibility="gone" />

    <TextView
        android:id="@+id/itemsListNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/file_extension_note"
        android:textAppearance="?android:attr/textAppearanceSmall"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:enabled="false"
            android:text="@string/delete" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/add" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnOk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/close" />
    </LinearLayout>

</LinearLayout>